--- a/1_final_project/makefile
+++ b/1_final_project/makefile
@@ -49,13 +49,6 @@ u_parse_san: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) pars
 u_parse_fast: unity_tests/Test_parser.c src/unity.c src/unity.h $(PARSEFULL) parse/specific.h parse/specific.c $(GENERALFULL)
 	$(CC) unity_tests/Test_parser.c src/unity.c $(PARSERUN) parse/specific.c $(GENERALRUN) -o u_parse_fast $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
 
-parser_san: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
-	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
-
-parser_fast: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
-	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser_fast $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
-
-
 u_test_interp_san: unity_tests/Test_interp.c src/unity.c src/unity.h $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpreter/specific.h $(STACKSFULL) $(GENERALFULL)
 		$(CC) unity_tests/Test_interp.c src/unity.c interpreter/specific.c  $(PARSERUN) $(INTERPRUN) $(STACKSRUN) $(GENERALRUN) -o u_test_interp_san $(CFLAGSSAN) $(INCINTERP) $(LIDLIBS)
 
@@ -65,32 +58,40 @@ u_test_interp_fast: unity_tests/Test_interp.c src/unity.c src/unity.h $(PARSEFUL
 
 
 
-u_exten_func_san:unity_tests/Test_extension_funcs.c src/unity.c src/unity.h extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_extension_funcs.c src/unity.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+u_exten_func_san:unity_tests/Test_extension_funcs.c src/unity.c src/unity.h extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h extension_arrays.c extension_arrays.h  $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_extension_funcs.c src/unity.c extension_funcs.c extension_flow.c extension_arrays.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-u_exten_func_fast:unity_tests/Test_extension_funcs.c src/unity.c src/unity.h extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_extension_funcs.c src/unity.c extension_funcs.c extension_flow.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+u_exten_func_fast:unity_tests/Test_extension_funcs.c src/unity.c src/unity.h extension_funcs.c extension_flow.c extension_flow.h  extension_funcs.h extension_arrays.c extension_arrays.h  $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_extension_funcs.c src/unity.c extension_funcs.c extension_flow.c extension_arrays.c  exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
 
-u_exten_flow_san: unity_tests/Test_flow.c src/unity.c src/unity.h extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_flow.c src/unity.c extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+u_exten_flow_san: unity_tests/Test_flow.c src/unity.c src/unity.h extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h extension_arrays.c extension_arrays.h  $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_flow.c src/unity.c extension_flow.c extension_funcs.c exten/specific.c extension_arrays.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-u_exten_flow_fast: unity_tests/Test_flow.c src/unity.c src/unity.h extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_flow.c src/unity.c extension_flow.c extension_funcs.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
+u_exten_flow_fast: unity_tests/Test_flow.c src/unity.c src/unity.h extension_flow.c extension_flow.h extension_funcs.c  extension_funcs.h extension_arrays.c extension_arrays.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_flow.c src/unity.c extension_flow.c extension_funcs.c exten/specific.c extension_arrays.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
-u_exten_func_flow_san: unity_tests/Test_func_flow.c src/unity.c src/unity.h extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_func_flow.c src/unity.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_flow_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+u_exten_interactions_san: unity_tests/Test_exten_interactions.c src/unity.c src/unity.h extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h  extension_arrays.c extension_arrays.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_exten_interactions.c src/unity.c extension_funcs.c extension_flow.c exten/specific.c extension_arrays.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_interactions_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
-u_exten_func_flow_fast: unity_tests/Test_func_flow.c src/unity.c src/unity.h extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) unity_tests/Test_func_flow.c src/unity.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_func_flow_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
-
-exten_arr_san: extension_arrays.c  exten/specific.c exten/specific.h  extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
-	$(CC) extension_arrays.c  exten/specific.c extension_funcs.c extension_flow.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) -o exten_arr_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
+u_exten_interactions_fast: unity_tests/Test_exten_interactions.c src/unity.c src/unity.h extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h extension_arrays.c extension_arrays.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_exten_interactions.c src/unity.c extension_funcs.c extension_flow.c exten/specific.c extension_arrays.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN)  -o u_exten_interactions_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
 u_exten_arr_san: unity_tests/Test_extension_arrays.c src/unity.c src/unity.h  extension_arrays.c extension_arrays.h  exten/specific.c exten/specific.h  extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
 	$(CC) unity_tests/Test_extension_arrays.c src/unity.c extension_arrays.c  exten/specific.c extension_funcs.c extension_flow.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) -o u_exten_arr_san $(CFLAGSSAN) $(INCEXTEN) $(LIDLIBS)
 
+u_exten_arr_fast: unity_tests/Test_extension_arrays.c src/unity.c src/unity.h  extension_arrays.c extension_arrays.h  exten/specific.c exten/specific.h  extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) $(STACKSFULL) $(GENERALFULL) $(HASHFULL) $(ARRFULL)
+	$(CC) unity_tests/Test_extension_arrays.c src/unity.c extension_arrays.c  exten/specific.c extension_funcs.c extension_flow.c  $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) $(ARRRUN) -o u_exten_arr_fast $(CFLAGSFAST) $(INCEXTEN) $(LIDLIBS)
 
+
+
+parser_san: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
+	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser_san $(CFLAGSSAN) $(INCPARSE) $(LIDLIBS)
+
+
+
+parser: parser.c $(PARSEFULL) $(GENERALFULL) parse/specific.h parse/specific.c
+	$(CC) parser.c $(PARSERUN) $(GENERALRUN) parse/specific.c  -o parser $(CFLAGSFAST) $(INCPARSE) $(LIDLIBS)
 
 extension: extension.c extension_funcs.c  extension_funcs.h extension_flow.c extension_flow.h $(PARSEFULL) $(INTERPFULL) exten/specific.c exten/specific.h $(STACKSFULL) $(GENERALFULL) $(HASHFULL) ADTS_and_general/neillsdl2.c ADTS_and_general/neillsdl2.h
 	$(CC) extension.c extension_funcs.c extension_flow.c exten/specific.c $(PARSERUN) $(INTERPRUN)  $(STACKSRUN) $(GENERALRUN) $(HASHRUN) ADTS_and_general/neillsdl2.c -o extension $(CFLAGSSDL) $(INCEXTEN) $(LIDLIBSSDL)
@@ -99,74 +100,76 @@ interp: interpreter.c $(PARSEFULL) $(INTERPFULL) interpreter/specific.c interpre
 	$(CC) interpreter.c $(PARSERUN) $(INTERPRUN)  interpreter/specific.c   ADTS_and_general/neillsdl2.c $(STACKSRUN) $(GENERALRUN) -o interp $(CFLAGSSDL) $(INCINTERP) $(LIDLIBSSDL)
 
 
-run_tests: test_interp_san test_interp_fast hash_map_san hash_map_fast test_stacks_san test_stacks_fast test_parser_san test_parser_fast exten_func_fast exten_func_san exten_flow_san exten_flow_fast exten_func_flow_san exten_func_flow_fast arrays_san arrays_fast
-	./parser_test_fast
-	./parser_test_san
-	./test_stacks_fast
-	./test_stacks_san
-	./hash_map_fast
-	./hash_map_san
-	./test_interp_san
-	./test_interp_fast
-	./exten_func_fast
-	./exten_func_san
-	./exten_flow_fast
-	./exten_flow_san
-	./exten_func_flow_san
-	./exten_func_flow_fast
-	./arrays_san
-	./arrays_fast
+run_tests: u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_san u_arrays_fast u_parse_san u_parse_fast u_test_interp_san u_test_interp_fast u_exten_func_san u_exten_func_fast u_exten_flow_san u_exten_flow_fast u_exten_arr_san u_exten_arr_fast u_exten_interactions_san u_exten_interactions_fast
+	./u_stacks_san
+	./u_stacks_fast
+	./u_hash_map_san
+	./u_hash_map_fast
+	./u_arrays_san
+	./u_arrays_fast
+	./u_parse_san
+	./u_parse_fast
+	./u_test_interp_san
+	./u_test_interp_fast
+	./u_exten_func_san
+	./u_exten_func_fast
+	./u_exten_flow_san
+	./u_exten_flow_fast
+	./u_exten_arr_san
+	./u_exten_arr_fast
+	./u_exten_interactions_san
+	./u_exten_interactions_fast
 
 
 #runs a series of invalid files and stores error message in p_errors.txt the | true stops the makefile from terminating after seeing an error
 run_parser_err: parser_fast
-	echo "test_files/test_turtles/parser/invalid/bad_spacing.txt" > p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/bad_spacing.txt 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_command.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/invalid_command.txt 2>>p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/missing_bracket.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/missing_bracket.txt 2>> p_errors.txt |true
-	echo "test_files/test_turtles/parser/invalid/invalid_do.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/invalid_do.txt 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/invalid_nested_loop.txt 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/invalid_set.txt 2>> p_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set_2.txt" >> p_errors.txt
-	./parser_fast test_files/test_turtles/parser/invalid/invalid_set_2.txt 2>> p_errors.txt
+	echo "test_files/test_turtles/parser/invalid/bad_spacing.ttl" > p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/bad_spacing.ttl 2>> p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_command.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/invalid_command.ttl 2>>p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/missing_bracket.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/missing_bracket.ttl 2>> p_errors.txt |true
+	echo "test_files/test_turtles/parser/invalid/invalid_do.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/invalid_do.ttl 2>> p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> p_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set_2.ttl" >> p_errors.txt
+	./parser_fast test_files/test_turtles/parser/invalid/invalid_set_2.ttl 2>> p_errors.txt
 
 run_parser_val: parser_fast
-	./parser_fast test_files/test_turtles/parser/valid/adding_loops.txt
-	./parser_fast test_files/test_turtles/parser/valid/more_do.txt
-	./parser_fast test_files/test_turtles/parser/valid/nested_loops.txt
-	./parser_fast test_files/test_turtles/parser/valid/polish_2.txt
-	./parser_fast test_files/test_turtles/parser/valid/polish.txt
-	./parser_fast test_files/test_turtles/parser/valid/stupid_valid_do.txt
-	./parser_fast test_files/test_turtles/parser/valid/using_variables.txt
+	./parser_fast test_files/test_turtles/parser/valid/adding_loops.ttl
+	./parser_fast test_files/test_turtles/parser/valid/more_do.ttl
+	./parser_fast test_files/test_turtles/parser/valid/nested_loops.ttl
+	./parser_fast test_files/test_turtles/parser/valid/polish_2.ttl
+	./parser_fast test_files/test_turtles/parser/valid/polish.ttl
+	./parser_fast test_files/test_turtles/parser/valid/stupid_valid_do.ttl
+	./parser_fast test_files/test_turtles/parser/valid/using_variables.ttl
 
 run_interp_err: interp
-	echo "test_files/test_turtles/interpreter/invalid/no_nums.txt" > i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/no_nums.txt 2>> i_errors.txt | true
-	echo "test_files/test_turtles/interpreter/invalid/too_many_nums.txt" >> i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/too_many_nums.txt 2>> i_errors.txt | true
-	echo "test_files/test_turtles/interpreter/invalid/unset_var.txt" >> i_errors.txt
-	./interp test_files/test_turtles/interpreter/invalid/unset_var.txt 2>> i_errors.txt | true
-	 echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.txt" >> i_errors.txt
-	./interp test_files/test_turtles/parser/invalid/invalid_nested_loop.txt 2>> i_errors.txt | true
-	echo "test_files/test_turtles/parser/invalid/invalid_set.txt" >> i_errors.txt
-	./interp test_files/test_turtles/parser/invalid/invalid_set.txt 2>> i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/no_nums.ttl" > i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/no_nums.ttl 2>> i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/too_many_nums.ttl" >> i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/too_many_nums.ttl 2>> i_errors.txt | true
+	echo "test_files/test_turtles/interpreter/invalid/unset_var.ttl" >> i_errors.txt
+	./interp test_files/test_turtles/interpreter/invalid/unset_var.ttl 2>> i_errors.txt | true
+	 echo "test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl" >> i_errors.txt
+	./interp test_files/test_turtles/parser/invalid/invalid_nested_loop.ttl 2>> i_errors.txt | true
+	echo "test_files/test_turtles/parser/invalid/invalid_set.ttl" >> i_errors.txt
+	./interp test_files/test_turtles/parser/invalid/invalid_set.ttl 2>> i_errors.txt | true
 
 run_extension_err:extension
-	echo "test_files/test_turtles/extension/invalid/no_arguments.txt" > ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/no_arguments.txt 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/too_many_args.txt" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/too_many_args.txt 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/unknown_func.txt" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/unknown_func.txt 2>> ext_errors.txt | true
-	echo "test_files/test_turtles/extension/invalid/same_var.txt" >> ext_errors.txt
-	./extension test_files/test_turtles/extension/invalid/same_var.txt 2>> ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/no_arguments.ttl" > ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/no_arguments.ttl 2>> ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/too_many_args.ttl" >> ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/too_many_args.ttl 2>> ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/unknown_func.ttl" >> ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/unknown_func.ttl 2>> ext_errors.txt | true
+	echo "test_files/test_turtles/extension/invalid/same_var.ttl" >> ext_errors.txt
+	./extension test_files/test_turtles/extension/invalid/same_var.ttl 2>> ext_errors.txt | true
 
 
 
 clean:
-	rm -f parser_test_fast parser_test_san test_stacks_fast test_stacks_san  parser_san test_interp_san test_interp_fast hash_map_san hash_map_fast interp extension exten_test_fast exten_test_san parser_fast exten_func_flow_san exten_func_flow_fast arrays_san arrays_fast
+	rm -f u_stacks_san u_stacks_fast u_hash_map_san u_hash_map_fast u_arrays_san u_arrays_fast u_parse_san u_parse_fast u_test_interp_san u_test_interp_fast u_exten_func_san u_exten_func_fast u_exten_flow_san u_exten_flow_fast u_exten_arr_san u_exten_arr_fast u_exten_interactions_san u_exten_interactions_fast
